# simple-django-login-and-register

./: Dockerfile  pyproject.toml
source/app/: urls.py  wsgi.py
source/app/conf/development/: settings.py
source/app/conf/production/: settings.py
source/coin_api/: urls.py  views.py
source/content/assets/css/: coin-styles.css  styles.css
source/content/templates/layouts/default/: page.html
source/content/templates/main/: coin-details.html  index.html
