[tool.poetry]
name = "crypto-coins"
version = "1.0"
description = "A Django project for displaying crypto coins"
readme = "README.md"
authors = ["Yehor Smoliakov <yehors+gh@ukr.net>"]
repository = "https://github.com/Riturajrs/simple-django-login-and-register"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "==5.0.7"
django-bootstrap4 = "==24.3"
djangorestframework = "^3.12.4"
requests = "^2.25.1"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
